fixed icon alignement

--- a/src/sass/_custom-variables.scss
+++ b/src/sass/_custom-variables.scss
@@ -19,6 +19,11 @@ $success: $limegreen;
 $warning: hsl(48, 89%, 60%);
 $danger: $tomato;
 
+/* Navbar */
+
+$navbar-breakpoint: 711px;
+
 /* Section */
 
 $section-padding: 2rem 1rem;
+
